--- a/site/config.yml
+++ b/site/config.yml
@@ -118,11 +118,11 @@ menu:
     main:
         - identifier: about
           name: About
-          url: /about
+          url: /page/about
           weight: 30
         - identifier: contact
           name: Contact
-          url: /contact
+          url: /page/contact
           weight: 30
           
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
